# dosbox-staging

./: README.md  meson.build  meson_options.txt
.github/workflows/: linux.yml  macos.yml  windows-msvc.yml  windows-msys2.yml
contrib/benchmark_zlibs/: meson.build
contrib/benchmark_zlibs/src/: main.cpp
contrib/resources/translations/: de.lng  en.lng  es.lng  fr.lng  nl.lng  pl.lng  ru.lng
include/: dos_inc.h  fraction.h  rect.h  sdlmain.h  string_utils.h  support.h  video.h
scripts/: create-package.sh  fetch-and-tar-subprojects.sh
src/: main.mm
src/capture/: capture.cpp
src/capture/image/: image_saver.cpp
src/cpu/: cpu.cpp  dyn_cache.h
src/dos/: dos_execute.cpp  program_boot.cpp  program_setver.cpp
src/gui/: render.cpp  sdlmain.cpp  shader_manager.cpp  title_bar.cpp
src/hardware/: vga_draw.cpp  voodoo.cpp
src/misc/: programs.cpp  string_utils.cpp
src/shell/: shell_misc.cpp
tests/: fraction_tests.cpp
vs/: dosbox.vcxproj  dosbox.vcxproj.filters
website/docs/downloads/release-notes/: 0.81.0-rc.md
